# Tracker

./: .appveyor.yml  .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  activate_venv  conanfile.py  install_deps  make_docs.sh  requirements.txt  setup.py  tracker.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cmake/: README.md  SetupTracker.cmake  setupTracker.cmake
docs/: CMakeLists.txt  Makefile  index.html
docs/doctrees/: environment.pickle  index.doctree  modules.doctree  tracker.doctree  tracker.food.doctree
docs/doxygen/: CMakeLists.txt  Doxyfile.in  Doxyfile.travis
docs/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tracker.food.html  tracker.html
docs/html/_modules/: index.html
docs/html/_modules/tracker/food/: food.html  utils.html
docs/html/_sources/: tracker.food.rst.txt  tracker.rst.txt
docs/source/: conf.py  index.rst
food/: Food.py  Macronutrients.py  Micronutrients.py  __init__.py  utils.py
html/: _c_make_c_x_x_compiler_id_8cpp.html  _check_function_exists_8cxx.html  _dart_configuration_8tcl.html  _data_8hpp.html  _data_8hpp.js  _data_8hpp__dep__incl.map  _data_8hpp__dep__incl.md5  _data_8hpp__incl.map  _data_8hpp__incl.md5  _data_8hpp_source.html  _database_8cpp.html  _database_8cpp__incl.map  _database_8cpp__incl.md5  _database_8hpp.html  _database_8hpp__dep__incl.map  _database_8hpp__dep__incl.md5  _database_8hpp__incl.map  _database_8hpp__incl.md5  _database_8hpp_source.html  _food_8cpp.html  _food_8cpp__incl.map  _food_8cpp__incl.md5  _food_8hpp.html  _food_8hpp__dep__incl.map  _food_8hpp__dep__incl.md5  _food_8hpp__incl.map  _food_8hpp__incl.md5  _food_8hpp_source.html  _macronutrients_8cpp.html  _macronutrients_8cpp__incl.map  _macronutrients_8cpp__incl.md5  _macronutrients_8hpp.html  _macronutrients_8hpp__dep__incl.map  _macronutrients_8hpp__dep__incl.md5  _macronutrients_8hpp__incl.map  _macronutrients_8hpp__incl.md5  _macronutrients_8hpp_source.html  _r_e_a_d_m_e_8md.html  _storable_8hpp.html  _storable_8hpp__dep__incl.map  (+194 more)
html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_1.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_0.js  files_1.js  files_2.js  (+41 more)
include/: README.md
include/database/: Data.hpp  Database.hpp  Storable.hpp  utils.cpp  utils.hpp  utils.tpp
include/food/: Food.hpp  Food.tpp  Macronutrients.hpp  food.hpp  food_utils.h  food_utils.hpp  macronutrients.hpp
latex/: _c_make_c_x_x_compiler_id_8cpp.tex  _check_function_exists_8cxx.tex  _dart_configuration_8tcl.tex  _data_8hpp.tex  _data_8hpp__dep__incl.md5  _data_8hpp__incl.md5  _database_8cpp.tex  _database_8cpp__incl.md5  _database_8hpp.tex  _database_8hpp__dep__incl.md5  _database_8hpp__incl.md5  _food_8cpp.tex  _food_8cpp__incl.md5  _food_8hpp.tex  _food_8hpp__dep__incl.md5  _food_8hpp__incl.md5  _macronutrients_8cpp.tex  _macronutrients_8cpp__incl.md5  _macronutrients_8hpp.tex  _macronutrients_8hpp__dep__incl.md5  _macronutrients_8hpp__incl.md5  _r_e_a_d_m_e_8md.tex  _storable_8hpp.tex  _storable_8hpp__dep__incl.md5  _storable_8hpp__incl.md5  annotated.tex  build_8py.tex  clang-tidy-diff_8py.tex  classconanfile_1_1_soci_test_conan.tex  classconanfile_1_1_soci_test_conan__inherit__graph.md5  classdatabase_1_1_database.tex  classdatabase_1_1_storable.tex  classdatabase_1_1_storable__inherit__graph.md5  classfood_1_1_food.tex  classfood_1_1_food__coll__graph.md5  classfood_1_1_macronutrients.tex  cmake_2_r_e_a_d_m_e_8md.tex  conanfile_8py.tex  dir_070a56164883fd6ee4154f2a59837e25.tex  dir_0eb593a5056791d5a063319d2b9e97b9.tex  (+56 more)
scripts/: README.md  cmake_format.py  configure_and_make.sh  format.py  modernize.sh  run-clang-tidy.py
src/: CMakeLists.txt  Food.py  app.cpp  food.db  food_utils.py  main.cpp  main.py
src/.mypy_cache/3.6/: Food.data.json  Food.meta.json  _importlib_modulespec.meta.json  abc.meta.json  builtins.meta.json  datetime.meta.json  main.data.json  main.meta.json  mypy_extensions.meta.json  sys.meta.json  time.meta.json  types.meta.json  typing.meta.json
src/.mypy_cache/3.6/collections/: __init__.meta.json  abc.meta.json
src/.mypy_cache/3.6/sqlite3/: __init__.data.json  __init__.meta.json  dbapi2.data.json  dbapi2.meta.json
src/database/: CMakeLists.txt  Database.cpp  Database.hpp  utils.cpp
src/food/: CMakeLists.txt  Food.cpp  Macronutrients.cpp  Serving.py  food_utils.cpp
src/gui/: CMakeLists.txt  MainMenu.cpp  MainMenu.hpp  gui.cpp  gui.qrc  plusminus.cpp  plusminus.hpp  sidepanel.cpp  sidepanel.qmlc
src/gui/data/: cities.json
src/gui/plugins/: CMakeLists.txt
src/gui/plugins/Food/: CMakeLists.txt  Food.cpp  Food.hpp  FoodPlugin.cpp  FoodPlugin.hpp  qmldir
src/gui/plugins/database/: CMakeLists.txt  DatabasePlugin.cpp  DatabasePlugin.hpp  qmldir  utils.cpp  utils.hpp
src/gui/plugins/food/: CMakeLists.txt  Food.cpp  Food.hpp  qmldir
src/gui/qml/: FlickableScroll.qml  GuiDisplay.qml  GuiToolbar.qml  ImageViewerWindow.qml  MainWindow.qml  TableCell.qml  main.qml  sidepanel.qml
src/gui/qml/+android/: main.qml
src/implementation/: compute.cpp  lib.cpp
tests/: CMakeLists.txt  context.py  test-food.cpp  test.py  test_food_utils.py
tests/database/: CMakeLists.txt  DummyStorable.cpp  DummyStorable.hpp  test_connection.cpp  test_utils.cpp
tools/: README.md  activate_venv  build.py  format.py  format_code.py  generateDocumentationAndDeploy.sh  set_env  set_env.bash
tracker/: __init__.py  main.py
tracker/food/: __init__.py  food.py  utils.py
tracker/gui/: __init__.py  main_window.py  main_window.ui  ui_window.py  widget.py
